# DragonHorde

.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  user.sh
Server/: Cargo.toml
Server/entity/src/: collection_creators.rs  collection_tags.rs  collections.rs  creators.rs  media.rs  media_collection.rs  media_creators.rs  media_tags.rs  sources.rs  tag_groups.rs  tags.rs
Server/src/: main.rs  queries.rs
Server/src/endpoints/: media.rs  mod.rs  search.rs  tags.rs
Server/src/endpoints/media/: creator_funcs.rs  source_funcs.rs  tag_funcs.rs
dragonhorde_api_client/src/api/: configuration.rs  media_api.rs  mod.rs  search_api.rs  tag_api.rs
dragonhorde_api_client/src/models/: media.rs  mod.rs
dragonhorde_client/src/views/: media.rs  mod.rs  search.rs
dragonhorde_common/src/: error.rs  hash.rs  lib.rs
dragonhorde_importer/: Cargo.toml
dragonhorde_importer/src/: db.rs  main.rs
dragonhorde_importer/src/api/: configuration.rs  media_api.rs  mod.rs
dragonhorde_importer/src/models/: fuzzysearch.rs  media.rs  mod.rs
dragonhorde_importer/src/sites/: e621.rs  error.rs  furaffinity.rs  mod.rs  site.rs  weasyl.rs
dragonhorde_server/: Cargo.toml
dragonhorde_server/entity/: Cargo.toml
dragonhorde_server/entity/src/: collection_creators.rs  collection_tags.rs  collections.rs  creator_alias.rs  creators.rs  media.rs  media_collection.rs  media_creators.rs  media_tags.rs  media_to_tags.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sources.rs  tag_groups.rs  tag_taggroup.rs  tags.rs
dragonhorde_server/migration/src/: lib.rs
dragonhorde_server/sql/: media_item_get.sqlx  media_item_get_collections.sqlx  media_item_get_creators.sqlx  media_item_get_tags.sqlx
dragonhorde_server/sql/endpoints/collections/: get_collection_by_path.sqlx  get_collections.sqlx
dragonhorde_server/sql/endpoints/creators/: get_creators.sqlx  get_creators_by_alias.sqlx
dragonhorde_server/sql/endpoints/duplicates/: get_duplicates.sqlx
dragonhorde_server/sql/endpoints/media/: creators_delete.sqlx  tags_delete.sqlx
dragonhorde_server/sql/endpoints/search/: collection.sqlx  hash_search.sqlx  search.sqlx
dragonhorde_server/src/: error.rs  main.rs  queries.rs
dragonhorde_server/src/api_models/: api_collection.rs  api_creator.rs  api_media.rs  api_search_query.rs  mod.rs  pagination.rs
dragonhorde_server/src/endpoints/: autocomplete.rs  collection.rs  creators.rs  duplicates.rs  media.rs  mod.rs  search.rs  shared.rs  tags.rs
dragonhorde_server/src/endpoints/media/: collection_funcs.rs  creator_funcs.rs  source_funcs.rs  tag_funcs.rs
dragonhorde_server/src/endpoints/relations/: collection_funcs.rs  creator_funcs.rs  mod.rs  tag_funcs.rs
openapi/: api.yaml
openapi/schema/: collection.json  creator.json  media.json  search.json  tagGroup.json
