[package]
name = "dragonhorde_server"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "entity" }
axum = { version = "0.8.3", features = ["multipart", "macros"] }
sea-orm = { version = "1.1.10", features = [ 'sqlx-postgres', 'runtime-tokio-rustls', "macros", "with-json", "postgres-array", "postgres-vector" ]}
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.41"
sha2 = "0.10.8"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
img_hash = { git = "https://github.com/sl1-1/img_hash.git" }
image = { version = "0.25.6", features = ["png", "tiff", "webp", "jpeg", "gif"] }
dragonhorde_common = { version = "0.1.0", path = "../dragonhorde_common" }
