[package]
name = "dragonhorde_importer"
version = "0.1.0"
edition = "2024"

[dependencies]
dragonhorde_api_client = {path = "../dragonhorde_api_client"}
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
tldextract = "0.6.0"
tokio = { version = "1.44.2", features = ["net", "rt-multi-thread", "rt", "macros"] }
async-trait = "0.1.88"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde_json = "1.0.140"
sea-orm = { version = "1.1.10", features = [ 'sqlx-sqlite', 'runtime-tokio-rustls', "macros" ]}
img_hash = "3.2.0"
image = "0.23.14"
csv = "1.3.1"
sha2 = "0.10.8"
base64 = "0.22.1"
furaffinity-rs = {path = "./furaffinity-rs"}
simple-error = "0.3.1"
chrono = "0.4.41"
log = "0.4.27"
env_logger = "0.11.8"
htmd = "0.2.1"
config = { version = "0.15.11", features = ["toml"] }
clap = { version = "4.5.38", features = ["derive"] }
